2002-05-20  Alex Graveley  <alex@ximian.com>

	* modules/vfolder-desktop-method.c (vfolder_uri_parse_internal):
	Set file to start of path if there are no slashes.

2002-05-20  Alex Graveley  <alex@ximian.com>

	* modules/vfolder-desktop-method.c (vfolder_uri_parse_internal):
	Set vuri->file to the basename of the URL, strip trailing slashes.
	(resolve_folder): Simplify lookup as trailing slashes are now
	stripped.
	(get_entry_unlocked): Don't call any_subdir, just let the lookup
	fail.
	(get_entry_unlocked): Resolve optinal leading path for
	all-applictions:

2002-05-20  Mark McLoughlin  <mark@skynet.ie>

	* modules/vfolder-desktop-method.c:
	(vfolder_uri_parse_internal): band aid for crasher. Work out
	basename correctly.
	(vfolder_desktop_dir_monitor), (vfolder_user_desktop_dir_monitor),
	(do_open), (do_read_directory): remove debug info.

2002-05-17  Alex Graveley  <alex@ximian.com>

	* modules/vfolder-desktop-method.c (VFOLDER_URI_PARSE): New
	macro/internal function to populate on-stack VFolderURI with
	unescaped copy of vfs uri.  Used throughout instead of
	get_basename() and broken path handling.

2002-05-17  Alex Graveley  <alex@ximian.com>

	* libgnomevfs/gnome-vfs-xfer.c
	(gnome_vfs_destination_is_writable): Handle
	GNOME_VFS_ERROR_INVALID_URI when creating .vfs-write.tmp, and
	assume writability.

2002-05-17  Michael Meeks  <michael@ximian.com>

	* test/test-mime.c (main): do a debug_shutdown.

	* test/mime-test-files/small-file: add as regression test,
	causes the crash below.

	* libgnomevfs/gnome-vfs-mime-magic.c
	(gnome_vfs_mime_try_one_magic_pattern): check vs. the
	range_end + pattern_length, not the range_start + pattern_length,
	otherwise for small files eg. 66 bytes and GnomeMagicEntry of
	nautilus_link ( range_end == 256, pattern_length == 13), we
	fairly soon segv in try_one_pattern_on_buffer.

2002-05-17  Anders Carlsson  <andersca@gnu.org>

	* libgnomevfs/gnome-vfs-mime-magic.c:
	(gnome_vfs_mime_try_one_magic_pattern):