@@ -1,3 +1,10 @@
+Mon May 20 10:41:17 2002  George Lebl <jirka@5z.com>
+
+	* modules/vfolder-desktop-method.c: fix root path reading (case where
+	  we read something like all-applications:/ rather then
+	  all-applications:  This fixes the panel run box and should fix
+	  the rest of issues of #82187
+
 2002-05-20  Alex Graveley  <alex@ximian.com>
 
 	* modules/vfolder-desktop-method.c (vfolder_uri_parse_internal):
